# m5c2

./: CMakeLists.txt  idf_component.yml  sdkconfig
components/board/: CMakeLists.txt  board.c  idf_component.yml
components/board/_motor/: motor.c  motor.h
components/board/_pmu/: pmu.c  pmu.h
components/board/axp192/: axp192.c  axp192.h
components/board/ili9341/: disp_driver.c  disp_driver.h  disp_spi.c  ili9341.c  ili9341.h
components/board/include/: board.h
main/: CMakeLists.txt  m5c2.c
