set(COMPONENT_SRCDIRS .)

list(APPEND COMPONENT_ADD_INCLUDEDIRS include)

list(APPEND COMPONENT_SRCDIRS axp192)
list(APPEND COMPONENT_ADD_INCLUDEDIRS axp192)

list(APPEND COMPONENT_SRCDIRS i2c_bus)
list(APPEND COMPONENT_ADD_INCLUDEDIRS i2c_bus)

list(APPEND COMPONENT_SRCDIRS _pmu)
list(APPEND COMPONENT_ADD_INCLUDEDIRS _pmu)

list(APPEND COMPONENT_SRCDIRS _motor)
list(APPEND COMPONENT_ADD_INCLUDEDIRS _motor)

idf_component_register(
    INCLUDE_DIRS ${COMPONENT_ADD_INCLUDEDIRS}
    SRC_DIRS ${COMPONENT_SRCDIRS}
    REQUIRES esp_driver_gpio driver
)